--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
 
 <body>
     <h1>Sesha in linux</h1>
-    <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d497698.77491967316!2d77.30126357557235!3d12.954459536040844!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae1670c9b44e6d%3A0xf8dfc3e8517e4fe0!2sBengaluru%2C%20Karnataka!5e0!3m2!1sen!2sin!4v1708358678361!5m2!1sen!2sin"
-        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d15547.423435533203!2d80.1600075472579!3d13.0448455074496!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTPCsDAyJzQxLjUiTiA4MMKwMTAnMDAuNCJF!5e0!3m2!1sen!2sin!4v1708361440178!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     <br>
     <hr>
     <a href="https://twitter.com/home"><ion-icon name="logo-twitter"></ion-icon></a>
